2002-12-19  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule-charset.c (charset_lookup_description_1): Use
	`NUM_LEADING_BYTES' in UTF-2000.

2002-11-29  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule-charset.c (Vcharset_china3_jef): Deleted.
	(Qchina3_jef): Deleted.
	(syms_of_mule_charset): Don't define `china3-jef'.
	(complex_vars_of_mule_charset): Likewise.

	* char-ucs.h (LEADING_BYTE_CHINA3_JEF): Deleted.
	(MIN_CHAR_CHINA3_JEF): Comment out.
	(MAX_CHAR_CHINA3_JEF): Comment out.

2002-11-26  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule-charset.c (Vcharset_ucs_gb): New variable.
	(Qucs_gb): New variable.
	(syms_of_mule_charset): Add new symbol `ucs-gb'.
	(complex_vars_of_mule_charset): Add new coded-charset `ucs-gb'.

	* char-ucs.h (LEADING_BYTE_UCS_GB): New macro.

2002-11-20  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule-charset.c (charset_code_point): if a coded-charset has a
	final-byte, don't inherit the builtin range of the mother CCS.

2002-11-15  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule-charset.c (charset_code_point): Fix problem about
	inheritance.

2002-11-14  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule-charset.c (decode_builtin_char): Reorganized.

2002-10-31  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* text-coding.c (char_encode_shift_jis): Modify for
	`charset_code_point'.
	(char_encode_big5): Likewise.
	(char_encode_utf8): Likewise.
	(char_encode_iso2022): Likewise.

	* mule-charset.c (charset_code_point): Add new argument
	`defined_only'.
	(Fencode_char): Add new optional argument `defined_only'.

	* chartab.c (put_char_table): Modify for `charset_code_point'.
	(map_char_table): Likewise.

	* char-ucs.h (charset_code_point): Add new argument
	`defined_only'.
	(encode_char_1): Modify for `charset_code_point'.

2002-10-30  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule-charset.c (complex_vars_of_mule_charset): Don't specify