@@ -137,7 +137,6 @@ typedef short Charset_ID;
 #define LEADING_BYTE_GT_PJ_10		(MIN_LEADING_BYTE + 50)
 #define LEADING_BYTE_GT_PJ_11		(MIN_LEADING_BYTE + 51)
 
-#define LEADING_BYTE_CBETA		(MIN_LEADING_BYTE + 83)
 /* #define LEADING_BYTE_CHINESE_BIG5_CDP	(MIN_LEADING_BYTE + 84) */
 #define LEADING_BYTE_HANZIKU_1		(MIN_LEADING_BYTE + 85)
 #define LEADING_BYTE_HANZIKU_2		(MIN_LEADING_BYTE + 86)
@@ -490,9 +489,10 @@ CHARSET_BY_ATTRIBUTES (int chars, int dimension, int final, int dir)
 
 #define MIN_CHAR_DAIKANWA	0x00E00000
 #define MAX_CHAR_DAIKANWA	(MIN_CHAR_DAIKANWA + 50100) /* 0xE0FFFF */
+/*
 #define MIN_CHAR_CBETA		0x00E20000
 #define MAX_CHAR_CBETA		0x00E2FFFF
-/*
+
 #define MIN_CHAR_CHINA3_JEF	0x00E80000
 #define MAX_CHAR_CHINA3_JEF	0x00E8FFFF
 */
